# Scratch

./: README.md
2025/03/: rubygems-platform.rb
2025/03/cocoapods-prepare-commands/: Cargo.toml  remove.sh
2025/03/cocoapods-prepare-commands/src/: main.rs
2025/03/gemspec-rs/: Cargo.toml
2025/03/gemspec-rs/examples/: new_spec.rs  ruby-3_3_5.rs
2025/03/gemspec-rs/src/: lib.rs
