[package]
name = "cocoapods-prepare-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
assoc = "0.1.3"
chrono = { version = "0.4.40", features = ["serde"] }
duct = "0.13.7"
git2 = "0.20.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
rayon = { version = "1.10.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
